Add citation for enriched version of Beck's thm

--- a/main.bib
+++ b/main.bib
@@ -165,3 +165,11 @@
   year={1982},
   publisher={CUP Archive}
 }
+
+@book{enriched-kan-extensions,
+  title={Kan extensions in enriched category theory},
+  author={Dubuc, Eduardo J},
+  volume={145},
+  year={1970},
+  publisher={Springer}
+}
