--- a/main.tex
+++ b/main.tex
@@ -700,7 +700,7 @@ They are strict lcc functors.
 
   It follows by \cite[theorem 4.85]{basic-concepts-of-enriched-category-theory} and the preservation of powers by $G$ that the adjunction $F \dashv G$ lifts to a $\mathrm{Gpd}$-adjunction.
   It is proved in \cite{algebraic-models} that $G$, when considered as a functor of ordinary categories, is monadic using Beck's monadicity theorem.
-  The only additional assumption for the enriched version of Beck's theorem we have to check is that the coequalizer of a $G$-split pair of morphisms as constructed in \cite{algebraic-models} is a colimit also in the enriched sense.
+  The only additional assumption for the enriched version of Beck's theorem \cite[theorem II.2.1]{enriched-kan-extensions} we have to check is that the coequalizer of a $G$-split pair of morphisms as constructed in \cite{algebraic-models} is a colimit also in the enriched sense.
   This follows immediately from the fact that $G$ is full and faithful on 2-cells.
   $G$ is $\mathrm{Gpd}$-monadic and accessible (see \todo{where?}), so $\operatorname{Alg} \mathcal{M}$ is $\mathrm{Gpd}$-cocomplete by \todo{two-dimensional monad theory}.
 
