Clarify use of transpose of homotopy

--- a/main.tex
+++ b/main.tex
@@ -674,14 +674,14 @@ They are strict lcc functors.
 
   In fact $\ell$ as defined as a lift in \eqref{eq:lift-in-power} is unique:
   Any other lift $\ell'$ will be homotopic to $\ell$.
-  This homotopy can be described as a commuting square
+  This homotopy can be described as a map $\mathcal{I} \times \mathcal{I} \rightarrow \mathcal{M}(B, G(X))$, i.e.\@ a commuting square
   \begin{equation}
     \begin{tikzcd}
       \ell_0 \arrow[r, "\ell"] \arrow[d, equals] & \ell_1 \arrow[d, equals] \\
       \ell_0 \arrow[r, "\ell'"] & \ell_1 \\
     \end{tikzcd}
   \end{equation}
-  in $\mathcal{M}(B, G(X))$, which implies that $\ell = \ell'$.
+  which implies that $\ell = \ell'$.
   From uniqueness of $\ell$ it follows that a map $G(Y) \rightarrow G(X)^\mathcal{I}$ preserves canonical lifts if and only if the two composites
   \begin{equation}
     \begin{tikzcd}[column sep=large]
