Add citation for cocompleteness of Alg M

--- a/main.bib
+++ b/main.bib
@@ -173,3 +173,14 @@
   year={1970},
   publisher={Springer}
 }
+
+@article{two-dimensional-monad-theory,
+  title={Two-dimensional monad theory},
+  author={Blackwell, Robert and Kelly, Gregory M and Power, A John},
+  journal={Journal of pure and applied algebra},
+  volume={59},
+  number={1},
+  pages={1--41},
+  year={1989},
+  publisher={North-Holland}
+}
