--- a/main.tex
+++ b/main.tex
@@ -702,7 +702,7 @@ They are strict lcc functors.
   It is proved in \cite{algebraic-models} that $G$, when considered as a functor of ordinary categories, is monadic using Beck's monadicity theorem.
   The only additional assumption for the enriched version of Beck's theorem \cite[theorem II.2.1]{enriched-kan-extensions} we have to check is that the coequalizer of a $G$-split pair of morphisms as constructed in \cite{algebraic-models} is a colimit also in the enriched sense.
   This follows immediately from the fact that $G$ is full and faithful on 2-cells.
-  $G$ is $\mathrm{Gpd}$-monadic and accessible (see \todo{where?}), so $\operatorname{Alg} \mathcal{M}$ is $\mathrm{Gpd}$-cocomplete by \todo{two-dimensional monad theory}.
+  $G$ is $\mathrm{Gpd}$-monadic and accessible (see \todo{where?}), so $\operatorname{Alg} \mathcal{M}$ is $\mathrm{Gpd}$-cocomplete by \cite[theorem 3.8]{two-dimensional-monad-theory}.
 
   It remains to show that $\operatorname{Alg} \mathcal{M}$ is groupoid enriched also in the model categorical sense.
   For this it suffices to remark that $G$ preserves limits and that $G$ preserves and reflects fibrations and weak equivalences, so the map
