Fix minor issues in sLcc interpretation

--- a/main.tex
+++ b/main.tex
@@ -733,8 +733,8 @@ With theorem \ref{th:algebraically-fibrant-model-category} we have found an equi
     \end{tikzcd}
   \end{equation}
   where $\{ t, \sigma \}$ denotes an lcc sketch with two objects and $\{ v : t \rightarrow \sigma \}$ is an lcc sketch with a single nontrivial morphism.
-  The vertical morphism on the left is induced by mapping $t$ to $1$ and $\sigma$ to $\sigma$, and the top morphism is the evident inclusion.
-  The variable $\Gamma.\sigma \vdash \mathbf{v} : p(\sigma)$ is given by the image of $v$.
+  The vertical morphism on the left is induced by mapping $t$ to $1$ (the \emph{canonical} terminal object of $\Gamma$) and $\sigma$ to $\sigma$, and the top morphism is the evident inclusion.
+  The variable $\Gamma.\sigma \vdash \mathbf{v} : p(\sigma)$ is given by the image of $v$ in $\Gamma.\sigma$.
 
   Unit types $\Gamma \vdash \mathbf{1}$ are given by the canonical terminal objects of strict lcc categories $\Gamma$.
   Binary product types $\Gamma \vdash \sigma \mathbf{\times} \tau$ are given by fibre products $\sigma \times_1 \tau$ over the canonical terminal object $1$ in $\Gamma$.
